--- a/index.html
+++ b/index.html
@@ -3,10 +3,124 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>김연주의 포트폴리오</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>안녕하세요</h1>
+    <section>
+      <article id="aboutMe">
+        <h1>
+          <p>안녕하세요</p>
+          <p>프론트엔드 개발자</p>
+          <p><span>김연주</span>입니다.</p>
+        </h1>
+        <p>
+          <a href="yeonjoo8231@naver.com" type="Email">Email</a>
+          <a href="https://github.com/yeonjoo8231">Github</a>
+          <a href="https://yaandu.tistory.com/">Blog</a>
+        </p>
+        <ul>
+          <li>어떤 개발자가 되고 싶은지 설명을 적어보겠습니다.</li>
+          <li>좋은 코드, 그리고 부와 명예를 갖고 싶어요</li>
+          <li>그러려면 기본이 탄탄하고 일론머스크와 맞팔을 해야합니다.</li>
+        </ul>
+      </article>
+      <article id="workExperience">
+        <h2>Work Experience</h2>
+        <ul class="contents">
+          <li>
+            <div class="title">
+              <h3>Company</h3>
+              <p>Frontend</p>
+              <p>0000.00.00 ~ 0000.00.00</p>
+            </div>
+            <div class="detail">
+              <h4>Project1</h4>
+              <div class="description">
+                Sunt eiusmod culpa deserunt officia in consectetur amet. Commodo
+                anim quis culpa esse occaecat anim tempor. Fugiat officia culpa
+                laboris Lorem reprehenderit dolore do. Ex consectetur eiusmod
+              </div>
+              <ul>
+                <li>
+                  Lorem nostrud ut commodo adipisicing nisi velit dolor laborum
+                  labore officia esse.
+                </li>
+                <li>Amet minim cupidatat exercitation sint eu.</li>
+                <li>
+                  Cillum consectetur amet esse velit elit consectetur veniam
+                  cupidatat.
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </article>
+      <article id="projects">
+        <h2>Project</h2>
+        <ul class="contents">
+          <li class="project">
+            <div class="image-box"></div>
+            <h4>Project1</h4>
+            <p class="stack">
+              <span>React.js</span>
+              <span>TypeScript</span>
+              <span>tailwind</span>
+            </p>
+            <ul class="description">
+              <li>
+                Lorem nostrud ut commodo adipisicing nisi velit dolor laborum
+                labore officia esse.
+              </li>
+              <li>Amet minim cupidatat exercitation sint eu.</li>
+              <li>
+                Cillum consectetur amet esse velit elit consectetur veniam
+                cupidatat.
+              </li>
+            </ul>
+          </li>
+          <li class="project">
+            <div class="image-box"></div>
+            <h4>Project2</h4>
+            <p class="stack">
+              <span>React.js</span>
+              <span>TypeScript</span>
+              <span>tailwind</span>
+            </p>
+            <ul class="description">
+              <li>
+                Lorem nostrud ut commodo adipisicing nisi velit dolor laborum
+                labore officia esse.
+              </li>
+              <li>Amet minim cupidatat exercitation sint eu.</li>
+              <li>
+                Cillum consectetur amet esse velit elit consectetur veniam
+                cupidatat.
+              </li>
+            </ul>
+          </li>
+          <li class="project">
+            <div class="image-box"></div>
+            <h4>Project3</h4>
+            <p class="stack">
+              <span>React.js</span>
+              <span>TypeScript</span>
+              <span>tailwind</span>
+            </p>
+            <ul class="description">
+              <li>
+                Lorem nostrud ut commodo adipisicing nisi velit dolor laborum
+                labore officia esse.
+              </li>
+              <li>Amet minim cupidatat exercitation sint eu.</li>
+              <li>
+                Cillum consectetur amet esse velit elit consectetur veniam
+                cupidatat.
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </article>
+    </section>
   </body>
 </html>
